src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Conversation_Context__c</fullName>
        <description>The conversation context.</description>
        <inlineHelpText>The conversation context.</inlineHelpText>
        <label>Conversation Context</label>
        <picklist>
            <picklistValues>
                <fullName>New product line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration on a paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker for an event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCEP Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration on a project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE (Center for Academic Excellence)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internships and Apprenticeships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiring Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Briefing Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Sharing Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Sharing External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Funding Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Inquiry</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Outcome_of_Conversation__c</fullName>
        <label>Outcome of Conversation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Resolution need to type if the task status is completed.</description>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>